(hw10) added choices for Priority, Status in Task

--- a/hw_10/tasks.json
+++ b/hw_10/tasks.json
@@ -26,6 +26,14 @@
         "Description": "Post for some event in my NGO",
         "Status": "Ready",
         "DueDate": "2024-09-29T00:00:00Z"
+    },
+"5":
+    {
+        "Title": "Create simple API",
+        "Description": "Look in Projector HW",
+        "Priority": "High",
+        "Status": "ToDo",
+        "DueDate": "2024-01-08T00:00:00Z"
     }
 
 }
