--- a/hw_10/tasks.json
+++ b/hw_10/tasks.json
@@ -34,5 +34,14 @@
         "Priority": "High",
         "Status": "ToDo",
         "DueDate": "2024-01-08T00:00:00Z"
-    }
+    },
+"6":{
+		"ID": 1,
+		"Title": "Do homework10 on Projector",
+		"Description": "This homework about creating RESTful API and now I need to add DB",
+		"Priority": "High",
+		"Status": "ToDo",
+		"CreatedAt": "2024-01-08T00:00:00Z",
+		"DueDate": "2024-01-08T00:00:00Z"
+	}
 }
