--- a/hw-10/docker-compose.yaml
+++ b/hw-10/docker-compose.yaml
@@ -3,6 +3,12 @@ services:
     build: .
     depends_on:
       - database
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "db"]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s 
     environment:
     - POSTGRES_CONN_STR=postgres://admin:justforhomework@database/db?sslmode=disable
     ports:
@@ -15,3 +21,9 @@ services:
       POSTGRES_PASSWORD: justforhomework
     ports:
       - "5432:5432"
+    volumes:
+    - db_data:/var/lib/postgresql/data
+    - ./init.sql:/docker-entrypoint-initdb.d/init.sql 
+
+volumes:
+  db_data:
